# Elo_maluco

./: CMakeLists.txt  README
data/: EloMaluco_estadoAtual_exemplo.xml  EloMaluco_estadoAtual_teste01.xml  EloMaluco_estadoInicialAcoes_exemplo.xml  EloMaluco_estadoInicialAcoes_teste01.xml  teste_01_facil.xml  teste_02_medio.xml  teste_03.xml
solution/: Solucao.xml
src/: Objects.cpp~  Solucao.xml  application.cpp  application.cpp~  application.hpp  main.cpp  main.cpp~  triangle.cpp~
